style: fix public header nav on mobile (#2291)

--- a/src/components/HeaderNav/HeaderNav.module.css
+++ b/src/components/HeaderNav/HeaderNav.module.css
@@ -55,7 +55,7 @@ ul.dropdownList {
 }
 
 .publicWrapper {
-  padding: 0 2rem;
+  padding: 0 1rem;
   border-bottom: 0.2rem solid transparent;
 }
 
